ci: sure, let's try adding a ppc64 build too

--- a/ci/azure-ci-cd.yml
+++ b/ci/azure-ci-cd.yml
@@ -62,12 +62,17 @@ parameters:
       vars:
         TARGET: x86_64-apple-darwin
         TOOLCHAIN: stable
+
   - name: crossBuilds
     type: object
     default:
     - name: aarch64_unknown_linux_gnu
       vars:
         TARGET: aarch64-unknown-linux-gnu
+
+    - name: powerpc64_unknown_linux_gnu
+      vars:
+        TARGET: powerpc64-unknown-linux-gnu
 
 variables:
   CROSS_VERSION: 0.2.1
