--- a/ci/azure-cross-build.yml
+++ b/ci/azure-cross-build.yml
@@ -66,7 +66,7 @@ steps:
     cargo run -- cargo package-released-binaries --command-name=./cross --reroot=. \
       -t $TARGET \
       $artifact_dir \
-      -- build $CROSS_ARGS --all
+      -- build $CROSS_ARGS
   displayName: "Package binaries"
 
 - task: PublishPipelineArtifact@1
