ci/azure-deployment.yml: pass --no-verify to `cargo publish`

--- a/ci/azure-deployment.yml
+++ b/ci/azure-deployment.yml
@@ -44,7 +44,7 @@ steps:
       # If `./cranko` isn't moved, Cargo will complain about the dirty
       # working directory.
       mv ./cranko /tmp/
-      /tmp/cranko cargo foreach-released publish
+      /tmp/cranko cargo foreach-released publish --no-verify
       mv /tmp/cranko .
     displayName: Publish updated Cargo crates
     env:
