Add `cranko ci-util env-to-file`

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,7 @@ exclude = [
 [dependencies]
 anyhow = "^1"
 atomicwrites = "^0.2"
+base64 = "^0.12"
 cargo_metadata = "^0.10"
 chrono = "^0.4"
 ci_info = "^0.10"
