--- a/ci/azure-deployment.yml
+++ b/ci/azure-deployment.yml
@@ -1,52 +1,78 @@
-# Cranko deployment pipline, run when all CI tests pass on the `master` or `rc
-# branches. NB: right now we do nothing on `master`! That could change.
+# Cranko deployment workflows, run when all CI tests pass on the `master` or `rc
+# branches. NB: right now we do nothing on `master`! (But we need a dummy job to
+# keep Pipelines happy.) That could change.
 
-steps:
+jobs:
 
-# if we're on the `rc` branch, the release has been fully vetted and the
-# internal artifacts have been gathered -- time to lock in a new `release`
-# commit and invoke the full release processes.
+- ${{ if ne(variables['Build.SourceBranchName'], 'rc') }}:
+  - job: dummy_setup_only
+    pool:
+      vmImage: ubuntu-20.04
+    steps:
+    - template: azure-deployment-setup.yml
+      parameters:
+        setupGit: false
 
 - ${{ if eq(variables['Build.SourceBranchName'], 'rc') }}:
-  - checkout: self
+  - job: branch_and_tag
+    pool:
+      vmImage: ubuntu-20.04
+    variables:
+    - group: Deployment Credentials
+    steps:
+    - template: azure-deployment-setup.yml
+      parameters:
+        setupGit: true
+    - bash: |
+        ./cranko release-workflow tag
+        git push --tags origin release:release
+      displayName: Tag and push
+      env:
+        GITHUB_TOKEN: $(GITHUB_TOKEN)
 
-  - bash: |
-      git switch -c release
-      git pull --ff-only $(Pipeline.Workspace)/git-release/release.bundle
-      git status
-      git show
-      tar xzf $(Pipeline.Workspace)/binary-x86_64-unknown-linux-gnu/cranko-*.tar.gz
-      ./cranko release-workflow tag
-    displayName: Prepare release commit and tags
+  - job: cargo_publish
+    pool:
+      vmImage: ubuntu-20.04
+    variables:
+    - group: Deployment Credentials
+    steps:
+    - template: azure-deployment-setup.yml
+    - bash: |
+        # If `./cranko` isn't moved, Cargo will complain about the dirty
+        # working directory.
+        mv ./cranko /tmp/
+        /tmp/cranko cargo foreach-released -- publish --no-verify
+      displayName: Publish updated Cargo crates
+      env:
+        CARGO_REGISTRY_TOKEN: $(CARGO_REGISTRY_TOKEN)
 
-  - bash: |
-      ./cranko github install-credential-helper
-      git push --tags origin release:release
-    displayName: Update release branch
-    env:
-      GITHUB_TOKEN: $(GITHUB_TOKEN)
+  - job: github_releases
+    pool:
+      vmImage: ubuntu-20.04
+    variables:
+    - group: Deployment Credentials
+    steps:
+    - template: azure-deployment-setup.yml
+      parameters:
+        setupGit: true
+    - bash: |
+        ./cranko github create-releases
+        ./cranko github upload-artifacts cranko $(Pipeline.Workspace)/binary-*/*
+      displayName: Create GitHub releases
+      env:
+        GITHUB_TOKEN: $(GITHUB_TOKEN)
 
-  - bash: |
-      # If `./cranko` isn't moved, Cargo will complain about the dirty
-      # working directory.
-      mv ./cranko /tmp/
-      /tmp/cranko cargo foreach-released -- publish --no-verify
-      mv /tmp/cranko .
-    displayName: Publish updated Cargo crates
-    env:
-      CARGO_REGISTRY_TOKEN: $(CARGO_REGISTRY_TOKEN)
-
-  - bash: |
-      ./cranko github create-releases
-      ./cranko github upload-artifacts cranko $(Pipeline.Workspace)/binary-*/*
-    displayName: Create GitHub releases
-    env:
-      GITHUB_TOKEN: $(GITHUB_TOKEN)
-
-  - bash: |
-      git fetch $(Pipeline.Workspace)/git-gh-pages/gh-pages.bundle gh-pages
-      git branch -f gh-pages FETCH_HEAD
-      git push --force origin gh-pages:gh-pages
-    displayName: Update GitHub pages website
-    env:
-      GITHUB_TOKEN: $(GITHUB_TOKEN)
+  - job: update_website
+    pool:
+      vmImage: ubuntu-20.04
+    steps:
+    - template: azure-deployment-setup.yml
+      parameters:
+        setupGit: true
+    - bash: |
+        git fetch $(Pipeline.Workspace)/git-gh-pages/gh-pages.bundle gh-pages
+        git branch -f gh-pages FETCH_HEAD
+        git push --force origin gh-pages:gh-pages
+      displayName: Update GitHub pages website
+      env:
+        GITHUB_TOKEN: $(GITHUB_TOKEN)
