--- a/ci/azure-deployment.yml
+++ b/ci/azure-deployment.yml
@@ -49,6 +49,7 @@ jobs:
         CARGO_REGISTRY_TOKEN: $(CARGO_REGISTRY_TOKEN)
 
   - job: github_releases
+    dependsOn: branch_and_tag # otherwise, GitHub creates the tag itself
     pool:
       vmImage: ubuntu-20.04
     variables:
