--- a/Cargo.toml
+++ b/Cargo.toml
@@ -36,6 +36,7 @@ petgraph = "^0.5"
 reqwest = { version = "^0.10", features = ["blocking"] }
 semver = "^0.9"
 serde = { version = "^1.0", features = ["derive"] }
+serde_json = "^1.0"
 structopt = "^0.3"
 tar = "^0.4"
 target-lexicon = "^0.11"
