src/logger.rs add linewrapping to notes

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -42,6 +42,7 @@ structopt = "^0.3"
 tar = "^0.4"
 target-lexicon = "^0.11"
 termcolor = "^1.1"
+terminal_size = "^0.1"
 textwrap = "^0.12"
 thiserror = "1.0"
 toml = "^0.5"
