--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,6 +24,7 @@ base64 = "^0.12"
 cargo_metadata = "^0.10"
 chrono = "^0.4"
 ci_info = "^0.10"
+configparser = "^1.0"
 dirs = "^3"
 dynfmt = { version = "^0.1", default-features = false, features = ["curly"] }
 flate2 = "^1.0"
@@ -33,6 +34,7 @@ json = "^0.12"
 lazy_static = "^1.4"
 log = "^0.4"
 lru = "^0.6"
+nom = "^5"
 petgraph = "^0.5"
 reqwest = { version = "^0.10", features = ["blocking"] }
 semver = "^0.9"
