--- a/ci/azure-ci-cd.yml
+++ b/ci/azure-ci-cd.yml
@@ -116,6 +116,18 @@ stages:
     variables:
       TOOLCHAIN: stable
 
+  # clippy check
+  - job: clippy
+    pool:
+      vmImage: ubuntu-16.04
+    steps:
+    - bash: rustup component add clippy
+      displayName: "Install clippy"
+    - bash: cargo clippy --all --all-targets --all-features -- --deny warnings
+      displayName: "Check clippy (cargo)"
+    variables:
+      TOOLCHAIN: stable
+
   # website/book build
   - job: website
     pool:
