--- a/Cargo.toml
+++ b/Cargo.toml
@@ -36,6 +36,7 @@ log = "^0.4"
 lru = "^0.6"
 nom = "^5"
 petgraph = "^0.5"
+quick-xml = "^0.22"
 rand = "^0.8"
 reqwest = { version = "^0.10", features = ["blocking"] }
 semver = "^0.9"
