--- a/ci/azure-ci-cd.yml
+++ b/ci/azure-ci-cd.yml
@@ -19,7 +19,7 @@ parameters:
     type: object
     default:
     - name: linux_stable
-      vmImage: ubuntu-20.04
+      vmImage: ubuntu-latest
       params:
         primaryBuild: true
       vars:
@@ -27,7 +27,7 @@ parameters:
         TOOLCHAIN: stable
 
     - name: linux_beta
-      vmImage: ubuntu-20.04
+      vmImage: ubuntu-latest
       params:
         canaryBuild: true
       vars:
@@ -35,7 +35,7 @@ parameters:
         TOOLCHAIN: beta
 
     - name: linux_nightly
-      vmImage: ubuntu-20.04
+      vmImage: ubuntu-latest
       params:
         canaryBuild: true
       vars:
@@ -98,7 +98,7 @@ stages:
   - ${{ each build in parameters.crossBuilds }}:
     - job: ${{ format('cross_{0}', build.name) }}
       pool:
-        vmImage: ubuntu-20.04
+        vmImage: ubuntu-latest
       steps:
       - template: azure-cross-build.yml
       variables:
@@ -107,7 +107,7 @@ stages:
   # rustfmt check
   - job: rustfmt
     pool:
-      vmImage: ubuntu-16.04
+      vmImage: ubuntu-latest
     steps:
     - bash: rustup component add rustfmt
       displayName: "Install rustfmt"
@@ -119,7 +119,7 @@ stages:
   # clippy check
   - job: clippy
     pool:
-      vmImage: ubuntu-16.04
+      vmImage: ubuntu-latest
     steps:
     - bash: rustup component add clippy
       displayName: "Install clippy"
@@ -131,7 +131,7 @@ stages:
   # website/book build
   - job: website
     pool:
-      vmImage: ubuntu-16.04
+      vmImage: ubuntu-latest
     steps:
     - bash: |
         fn="mdbook-v$(MDBOOK_VERSION)-x86_64-unknown-linux-gnu.tar.gz"
