csproj: rewrite ProductCode and PackageCode when rewriting version
We were doing this at least somewhat incorrectly: the docs state that no two
installers should have the same PackageCode unless they're identical. The
ProductCode has more sophisticated semantics that we could and probably
shouldsupport, but I'm trying to get my installers working and am going to pile
up some technical debt here.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -51,6 +51,7 @@ textwrap = "^0.12"
 thiserror = "1.0"
 toml = "^0.5"
 toml_edit = "^0.2"
+uuid = { version = "^0.8", features = ["v4"] }
 zip = { version = "^0.5", default-features = false, features = ["deflate", "time"] }
 
 [features]
