src/zenodo.rs: implement first-time registration

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,6 +31,7 @@ flate2 = "^1.0"
 git-url-parse = "^0.2"
 git2 = "^0.13"
 json = "^0.12"
+json5 = "^0.4"
 lazy_static = "^1.4"
 log = "^0.4"
 lru = "^0.6"
