--- a/Cargo.toml
+++ b/Cargo.toml
@@ -36,6 +36,7 @@ lazy_static = "^1.4"
 log = "^0.4"
 lru = "^0.6"
 nom = "^5"
+percent-encoding = "^2"
 petgraph = "^0.5"
 quick-xml = "^0.22"
 rand = "^0.8"
