--- a/ci/azure-cross-build.yml
+++ b/ci/azure-cross-build.yml
@@ -1,19 +1,16 @@
+# Run a cross build. Expected variables:
+#
+# - $TARGET
+# - $CROSS_VERSION
+
 steps:
 - checkout: self
 
-- bash: |
-    set -ex
-    rustup target add $TARGET
+- bash: rustup target add $TARGET
   displayName: Add target $(TARGET)
 
 - bash: |
-    set -ex
-    rustup -V
-    rustc -Vv
-    cargo -V
-  displayName: Log versions
-
-- bash: |
+    set -xeuo pipefail
     fn="cross-v$(CROSS_VERSION)-x86_64-unknown-linux-gnu.tar.gz"
     url="https://github.com/rust-embedded/cross/releases/download/v$(CROSS_VERSION)/$fn"
     wget -q --progress=dot "$url"
@@ -28,27 +25,6 @@ steps:
 - bash: |
     echo "##vso[task.setvariable variable=CROSS_ARGS;]--target=$TARGET --release --features=vendored-openssl"
   displayName: Set build variables
-
-# Bootstrap a binary for the buildhost arch with the unmodified checkout at
-# 0.0.0 versions.
-
-- bash: cargo build --all
-  displayName: "cargo build (bootstrap)"
-
-- bash: |
-    cargo run -- release-workflow apply-versions
-  displayName: "cranko release-workflow apply-versions (using bootstrapped build)"
-
-# Rebuild with versions and create the release commit
-
-- bash: cargo build --all
-  displayName: "cargo build (versioned)"
-
-- bash: |
-    git add .
-    cargo run -- release-workflow commit
-    git show HEAD
-  displayName: "Make release commit"
 
 # Main build/test
 
