ci/azure-ci-cd.yml: fix deployment activation, sigh

--- a/ci/azure-ci-cd.yml
+++ b/ci/azure-ci-cd.yml
@@ -20,7 +20,7 @@ stages:
   - template: azure-build-and-test.yml
 
 - stage: Deploy
-  condition: and(succeeded('MainBuild'), ne(variables['build.reason'], 'PullRequest'))
+  condition: and(succeeded('BuildAndTest'), ne(variables['build.reason'], 'PullRequest'))
   jobs:
   - template: azure-deployment.yml
     parameters:
