ci/zenodo.json5: assign our concept record ID

--- a/ci/zenodo.json5
+++ b/ci/zenodo.json5
@@ -3,7 +3,7 @@
 // remarks in this file.
 
 {
-  conceptrecid: 'new-for:0.12.2',
+  conceptrecid: '6981679',
 
   metadata: {
     upload_type: 'software',
