--- a/ci/azure-cross-build.yml
+++ b/ci/azure-cross-build.yml
@@ -11,8 +11,8 @@ steps:
 
 - bash: |
     set -xeuo pipefail
-    fn="cross-v$(CROSS_VERSION)-x86_64-unknown-linux-gnu.tar.gz"
-    url="https://github.com/rust-embedded/cross/releases/download/v$(CROSS_VERSION)/$fn"
+    fn="cross-x86_64-unknown-linux-gnu.tar.gz"
+    url="https://github.com/cross-rs/cross/releases/download/v$(CROSS_VERSION)/$fn"
     wget -q --progress=dot "$url"
     tar xzf "$fn"
     rm -f "$fn"
