--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,11 +11,7 @@ repository = "https://github.com/pkgw/cranko"
 readme = "README.md"
 keywords = ["ci", "cli", "release-automation"]
 categories = ["command-line-utilities", "development-tools"]
-exclude = [
-  "book",
-  "ci",
-  "www"
-]
+exclude = ["book", "ci", "www"]
 
 [dependencies]
 anyhow = "^1"
@@ -38,7 +34,7 @@ lru = "^0.7"
 nom = "^5"
 percent-encoding = "^2"
 petgraph = "^0.5"
-quick-xml = "^0.22"
+quick-xml = "^0.31"
 rand = "^0.8"
 reqwest = { version = "^0.11", features = ["blocking"] }
 semver = "^0.9"
@@ -54,7 +50,10 @@ thiserror = "1.0"
 toml = "^0.5"
 toml_edit = "^0.2"
 uuid = { version = "^0.8", features = ["v4"] }
-zip = { version = "^0.5", default-features = false, features = ["deflate", "time"] }
+zip = { version = "^0.5", default-features = false, features = [
+  "deflate",
+  "time",
+] }
 
 [features]
 vendored-openssl = ["git2/vendored-openssl"]
