Work around a bug in which `dynfmt` fails in release mode
See: https://github.com/jan-auer/dynfmt/pull/9

And: https://github.com/jqnatividad/qsv/pull/1467/files

This should go away when a new dynfmt release comes out, or at least
migrate to a scheme where we're not relying on someone else's repo and
branch. But this should be OK for now.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -55,5 +55,9 @@ zip = { version = "^0.5", default-features = false, features = [
   "time",
 ] }
 
+# https://github.com/jan-auer/dynfmt/pull/9
+[patch.crates-io]
+dynfmt = { git = "https://github.com/jqnatividad/dynfmt", branch = "2021-clippy_ptr_as_ptr-bumpdeps" }
+
 [features]
 vendored-openssl = ["git2/vendored-openssl"]
